puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.ActivityLog/content/Models/Users/UserActivitiesViewModel.cs.pp
namespace $rootnamespace$.Models.Users
{
    using System.Collections.Generic;
    using Core.Model;

    public class UserActivitiesViewModel : UserViewModel
    {
        private IEnumerable<UserActivities> _activities;
        public IEnumerable<UserActivities> Activities
        {
            get { return _activities??(_activities = new List<UserActivities>()); }
            set { _activities = value; }
        }
    }
}